# ROC-ACT

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig
components/core/: CMakeLists.txt  MessagingClient.hpp  SensorFusion.cpp  StateManager.cpp  StateManager.hpp
components/drivers/: CMakeLists.txt  ImuDriver.cpp  SDCardDriver.cpp  TelemetryDriver.cpp
components/drivers/include/drivers/: BarometerDriver.cpp  BarometerDriver.hpp  ImuDriver.hpp  PyroDriver.cpp  PyroDriver.hpp  SDCardDriver.hpp  TelemetryDriver.cpp  TelemetryDriver.hpp
components/drivers/include/drivers/mpu6000/: mpu6000.cpp  mpu6000.hpp
components/freertos_config/: FreeRTOSConfig.h  startup.c
components/hal/: CMakeLists.txt  GPIO.hpp  HAL.cpp  UARTDriver.hpp
components/msg_proto/: CMakeLists.txt  event.proto  sensor_baro.proto  sensor_imu.proto
components/msg_proto/proto/: flight_state.proto  fused_sensor_data.proto  pyro_command.proto  quaternion.proto  vector3.proto
components/novact_comm/: CMakeLists.txt
components/novact_comm/include/: GcsStreamDriver.hpp  ICommunicationChannel.hpp  ProtoSender.hpp
components/novact_comm/main/: main.cpp
components/novact_comm/src/: GcsStreamDriver.cpp  ProtoSender.cpp
components/novact_core/: CMakeLists.txt
components/novact_core/include/core/: ILogger.hpp  Logger.cpp  Logger.hpp  MessagingClient.cpp  MessagingClient.hpp  SensorFusion.cpp  SensorFusion.hpp  StateManager.cpp  StateManager.hpp
components/novact_hal/: CMakeLists.txt
components/novact_hal/hal/: HAL.hpp  I2C.hpp  SPI.hpp  Util.hpp
components/tasks/: CMakeLists.txt  baro_task.cpp  idf_component.yml  imu_task.cpp  led_status_task.cpp  logger_task.cpp  pyro_task.cpp  state_task.cpp  telemetry_task.cpp
components/tasks/include/: led_status_codes.hpp
docs/: prd.md
freertos_config/: CMakeLists.txt  startup.c
include/mreq/: topic_registry_autogen.cpp  topic_registry_autogen.hpp
main/: CMakeLists.txt  main.cpp
msg/: event.proto  flight_state.proto  pyro_command.proto
src/: main.cpp
src/tasks/: baro_task.cpp  imu_task.cpp  logger_task.cpp  pyro_task.cpp  state_task.cpp  telemetry_task.cpp
